--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3": "^5.5.0",
     "dagre-d3": "^0.6.1",
     "element-ui": "^2.4.4",
+    "monaco-editor": "^0.16.2",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
