--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^2.30.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "node-notifier": "^5.1.2",
